:sparkles: update version

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,6 +2,8 @@
   "name": "@zee/cli",
   "version": "1.0.0",
   "main": "./build/cli.js",
+  "author": "Srinivas Valekar <https://github.com/valekar>",
+  "repository": "git@github.com:ZeeFi/zee-sdk.git",
   "license": "MIT",
   "scripts": {
     "build": "tsc -p ./src",
