--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,7 +37,7 @@
     ]
   },
   "dependencies": {
-    "@zee/oracle" : "../oracle-sdk/dist",
+    "@zee/oracle-sdk" : "../oracle-sdk/dist",
     "aptos" : "^1.3.7",
     "yaml":"^2.1.1",
     "cli-progress": "^3.10.0",
