:sparkles: update version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "zee",
+    "name": "zeefi",
     "version": "0.0.1",
     "description": "Zee JS monorepo",
     "repository": "git@github.com:metablockshq/kyraa.git",
