--- a/packages/oracle-sdk/package.json
+++ b/packages/oracle-sdk/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@zee/oracle-sdk",
+    "name": "@zeefi/oracle-sdk",
     "version": "1.0.0",
     "license": "MIT",
     "main": "dist/index.js",
