--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,39 +2,45 @@
   "name": "@zeefi/cli",
   "version": "1.0.0",
   "main": "./build/cli.js",
+  "typings": "dist/index.d.ts",
   "author": "Srinivas Valekar <https://github.com/valekar>",
   "repository": "git@github.com:ZeeFi/zee-sdk.git",
   "license": "MIT",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "build": "tsc -p ./src",
-    "watch": "tsc -w -p ./src",
-    "format": "prettier --loglevel warn --write \"**/*.{ts,js,json,yaml}\"",
-    "format:check": "prettier --loglevel warn --check \"**/*.{ts,js,json,yaml}\"",
-    "lint": "eslint \"src/**/*.ts\" --fix",
-    "lint:check": "eslint \"src/**/*.ts\"",
-    "test": "jest"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --runInBand",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
   },
-  "pkg": {
-    "scripts": "./build/**/*.{js|json}"
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
   },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ],
-      "@babel/preset-typescript"
-    ]
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
   "jest": {
     "testPathIgnorePatterns": [
       "<rootDir>/build/",
       "<rootDir>/node_modules/"
     ]
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
     "@zee/oracle-sdk": "../oracle-sdk/dist",
@@ -54,7 +60,17 @@
     "@types/webgl2": "^0.0.6",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "jest": "^27.5.1",
-    "typescript": "^4.6.3"
+    "camelcase": "^5.3.1",
+    "chai": "^4.3.6",
+    "husky": "^7.0.4",
+    "js-sha256": "^0.9.0",
+    "loglevel": "^1.8.0",
+    "mocha": "^9.2.0",
+    "prettier": "^2.5.1",
+    "size-limit": "^7.0.8",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   },
-  "gitHead": "4d94dd8b25df410b1d68e3321bb8b86b8fec9ee5"
+  "gitHead": "bb9fb0223871027045889079ae09f1bdb7435a1b"
 }
