--- a/rust/crates/oracle-sdk/Cargo.toml
+++ b/rust/crates/oracle-sdk/Cargo.toml
@@ -12,3 +12,4 @@ rand = "0.8.5"
 reqwest = { version = "0.11.11", features = ["blocking", "json"] }
 serde_json = "1.0.82"
 tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
+anyhow = "1.0.32"
