--- a/rust/crates/oracle-sdk/Cargo.toml
+++ b/rust/crates/oracle-sdk/Cargo.toml
@@ -20,3 +20,7 @@ serde_yaml = "0.9.10"
 serde = "1.0.144"
 thiserror = "1.0.31"
 tokio = { version = "1", features = ["full"] }
+dotenv = {version = "0.15.0"}
+
+log = "0.4"
+pretty_env_logger = "0.4"
